ingress/nginx-ingress/hands-on/dynamic/blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-app
  labels:
    app: dynamic-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-application
  template:
    metadata:
      labels:
        app: dynamic-application
    spec:
      containers:
      - name: blog-container
        image: nginx
        # image: nginx
