ingress/nginx-ingress/hands-on/dynamic/blog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-svc
  labels:
    app: dynamic-application
spec:
  type: ClusterIP
  selector:
    app: dynamic-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
